--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "carstore",
+  "homepage": "https://mehdirazanaqvi.github.io/tailwind-practice-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -14,6 +17,7 @@
     "@mui/material": "^5.14.0",
     "@mui/styled-engine-sc": "^5.12.0",
     "autoprefixer": "10.4.14",
+    "gh-pages": "^5.0.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
